Clean failed tasks and create indexes
Signed-off-by: Gerben Kroes <gerben@kroesctrl.nl>